[package]
name = "lunar-serve"
version = "0.1.0"
edition = "2021"
description = "Read-only HTTP distribution layer for LunarAST ecosystem data"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
lunar = { path = "../lunar" }
tower-http = { version = "0.5", features = ["cors"] }
